log
Thu 04 May 2023 04:31:53 PM UTC: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:10: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   59 |       if(n -> sudo[i][j] = 0){
      |          ^
sudoku.c:63:16: error: expected identifier before ‘[’ token
   63 |           new->[i][j] = k;
      |                ^
sudoku.c:55:10: error: unused variable ‘y’ [-Werror=unused-variable]
   55 |   int x, y;
      |          ^
sudoku.c:55:7: error: unused variable ‘x’ [-Werror=unused-variable]
   55 |   int x, y;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
6b49df8
Thu 04 May 2023 04:32:12 PM UTC: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:57:10: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   57 |       if(n -> sudo[i][j] = 0){
      |          ^
cc1: all warnings being treated as errors
Compilation failed
8068606
Thu 04 May 2023 04:32:22 PM UTC: 
 sudoku.c | 0
 1 file changed, 0 insertions(+), 0 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:57:10: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   57 |       if(n->sudo[i][j] = 0){
      |          ^
cc1: all warnings being treated as errors
Compilation failed
e49dc5f
Thu 04 May 2023 04:32:43 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
5071c0d
